--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Beranda</title>
     <link rel="icon" type="image/x-icon" href="tkjt.png">
     <style>
-        /* Terapkan box-sizing border-box agar padding tidak menambah lebar */
+        /* Set box-sizing for all elements */
         *,
         *::before,
         *::after {
@@ -55,7 +55,7 @@
 
         /* Header styles */
         header {
-            background: #ffffff;
+            background: #fff;
             color: #1e1e1e;
             min-height: 80px;
             padding: 20px;
@@ -198,7 +198,7 @@
         .content {
             flex: 1;
             padding: 20px;
-            background: #ffffff;
+            background: #fff;
             margin-top: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -293,7 +293,7 @@
         }
 
         .box-content:hover {
-            background: #ffffff;
+            background: #fff;
             transform: scale(1.02);
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
@@ -316,7 +316,7 @@
         }
 
         .faq-item:hover {
-            background: #ffffff;
+            background: #fff;
             transform: scale(1.02);
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
@@ -371,7 +371,7 @@
 
         /* Footer styles */
         footer {
-            background: #ffffff;
+            background: #fff;
             color: #1e1e1e;
             margin-top: 20px;
             padding: 20px;
@@ -421,7 +421,8 @@
 <body>
     <header>
         <div class="container header-container">
-            <div class="logo">
+            <div class="logo"
+                onclick="this.clickCount = this.clickCount || 0; this.clickCount++; if (this.clickCount === 2) { window.location.href = 'https://github.com/mynamethiris/jurusantkjt'; }">
                 <img src="Pictures/tkjt.png" />
             </div>
             <div class="title-text">
@@ -449,7 +450,7 @@
 
     <div class="container content">
         <div class="shine" style="width: 100%;"
-            onclick="window.location.href='https://smkind-deltamas.sch.id/'">
+            onclick="window.location.href='https://www.youtube.com/live/71vc7MK6pRs?si=23IenPDdvn8W3D9e'">
             <img src="Pictures/smk-ami.png" alt="SMK Ananda Mitra Industri Deltamas"
                 style="width: 100%; height: 100%; margin-top: 5px; border-radius: 8px; cursor: pointer;" />
         </div>
@@ -475,7 +476,7 @@
                 TKJT di SMK Ananda Mitra Industri Deltamas mengusung pendekatan pembelajaran berbasis praktik dan proyek
                 nyata. Siswa tidak hanya belajar teori di kelas, tetapi juga langsung mengaplikasikan pengetahuan mereka
                 melalui simulasi jaringan, instalasi perangkat, dan troubleshooting sistem. Didukung oleh fasilitas
-                laboratorium modern dan kerja sama dengan mitra industri, siswa TKJT dibekali pengalaman kerja sejak
+                laboratorium dan kerja sama dengan mitra industri, siswa TKJT dibekali pengalaman kerja sejak
                 dini yang relevan dengan kebutuhan dunia usaha dan dunia industri (DU/DI).
             </p>
         </div>
@@ -493,9 +494,10 @@
 
     <div class="container content">
         <div style="text-align: center;">
-            <h2>👨‍🎓 Spesialisasi Jurusan TKJT</h2>
+            <h2>🎯 Spesialisasi Jurusan TKJT</h2>
             <p>
-                Jurusan Teknik Komputer Jaringan dan Telekomunikasi (TKJT) memiliki beberapa spesialisasi yang menarik untuk dipelajari. 
+                Jurusan Teknik Komputer Jaringan dan Telekomunikasi (TKJT) memiliki beberapa spesialisasi yang menarik
+                untuk dipelajari.
                 Berikut adalah beberapa spesialisasi yang dapat kamu pilih:
             </p>
 
@@ -557,7 +559,7 @@
             <div class="faq-question">Apakah jurusan TKJT memerlukan kemampuan khusus?</div>
             <div class="faq-answer">
                 <p>Tidak ada kemampuan khusus yang wajib, namun minat dan ketertarikan pada teknologi, logika, dan
-                    pemecahan masalah sangat membantu.
+                    pemecahan masalah sangat membantu dalam belajar.
             </div>
         </div>
         <div class="faq-item">
@@ -565,19 +567,11 @@
                 jurusan TKJT?</div>
             <div class="faq-answer">
                 <ul>
-                    <li>Komputer/laptop untuk siswa (biasanya 1 siswa 1 PC).</li>
-                    <li>Komputer server (untuk praktik jaringan, hosting, virtualisasi).</li>
-                    <li>Monitor tambahan / LCD projector.</li>
-                    <li>Perangkat Jaringan.</li>
-                    <li>Router (misalnya Cisco, Mikrotik).</li>
-                    <li>Switch (manageable / unmanageable).</li>
-                    <li>Hub.</li>
-                    <li>Access Point / Wireless Router.</li>
+                    <li>Komputer (untuk praktik jaringan, hosting, programming dan virtualisasi).</li>
+                    <li>Perangkat Jaringan (Access Point, Router, Switch, dan Hub).</li>
                     <li>Modem dan perangkat internet.</li>
                     <li>Media Jaringan.</li>
                     <li>Kabel UTP, STP, dan Fiber Optik.</li>
-                    <li>RJ-45 konektor.</li>
-                    <li>Patch panel dan Keystone jack.</li>
                     <li>Kabel tester dan LAN tester.</li>
                 </ul>
             </div>
